--- a/src/components/Jobs/JobDetail/styles.scss
+++ b/src/components/Jobs/JobDetail/styles.scss
@@ -6,3 +6,48 @@
 .job-status-component {
     width: 200px;
 }
+
+.task-detail,
+.task-performance,
+.job-detail {
+  margin-top: 10px;
+}
+
+.table-detail,
+.table-detail td,
+.table-detail th {
+  border: 1px solid #d8d4d4;
+  border-collapse: collapse;
+}
+
+.table-detail {
+  width: 100%;
+  margin-top: 10px;
+  td,
+  th {
+    padding: 10px;
+  }
+}
+
+.task-detail-left {
+  padding: 0 10px;
+}
+
+.task-detail-right {
+  background: #7d7d7d;
+  height: 422px;
+  margin-top: 10px;
+  padding: 10px;
+
+  span {
+    color: #fff;
+  }
+}
+
+.task-detail-action {
+  margin: 10px;
+
+  button {
+    margin-right: 20px;
+  }
+}
