--- a/src/components/SideBar/styles.scss
+++ b/src/components/SideBar/styles.scss
@@ -13,6 +13,10 @@ $background: #2d3446;
   .ant-layout-sider-trigger {
     background: $background !important;
   }
+
+  svg {
+    margin-bottom: 10px;
+  }
 }
 
 .menu {
