taskes/performance chart, box statistic

--- a/src/components/Tasks/TaskDetail/styles.scss
+++ b/src/components/Tasks/TaskDetail/styles.scss
@@ -1,5 +1,6 @@
 .task-detail,
 .task-performance,
+.task-box-statistic,
 .job-detail {
   margin-top: 10px;
 }
@@ -24,5 +25,11 @@
 
   button {
     margin-right: 20px;
+  }
+}
+
+.task-box-statistic {
+  h3 {
+    margin-bottom: 0;
   }
 }
