--- a/src/components/Jobs/JobDetail/styles.scss
+++ b/src/components/Jobs/JobDetail/styles.scss
@@ -34,7 +34,7 @@
 }
 
 .task-detail-right {
-  background: #7d7d7d;
+  background-color: #e9e9e9;
   height: 422px;
   margin-top: 10px;
   padding: 10px;
