--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -1,6 +1,6 @@
 .form-container {
     max-width: 500px;
-    margin: 0 auto;
+    margin: 100px auto;
     border: 1px solid black;
     border-radius: 5px;
 }
