--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -10,6 +10,7 @@
 
 .card-header {
   padding: 20px;
+  overflow-wrap: break-word;
 }
 
 .card-icon {
@@ -22,8 +23,10 @@
 }
 
 .card-dashboard-active {
-  height: 194px;
-  position: relative;
+  min-height: 194px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   h1 {
     font-size: 68px !important;
@@ -36,21 +39,21 @@
 }
 
 .card-dashboard-content {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  word-break: break-all;
 }
 
 .card-header-right {
   padding: 20px;
   text-align: right;
+  overflow-wrap: break-word;
 }
 
 .card-dashboard-custom{
-  height: 110px;
-  position: relative;
+  min-height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   h1{
     font-size: 40px !important;
