--- a/src/components/Tasks/styles.scss
+++ b/src/components/Tasks/styles.scss
@@ -1,3 +1,8 @@
 // .tasks-card {
 //     padding: 8px 0 !important;
 // }
+@media (max-width: 768px) {
+  .block-dashBoard__marginTop {
+      margin-top: 10px;
+  }
+}
