--- a/src/components/Jobs/JobDetail/styles.scss
+++ b/src/components/Jobs/JobDetail/styles.scss
@@ -29,9 +29,9 @@
   }
 }
 
-.task-detail-left {
-  padding: 0 10px;
-}
+// .task-detail-left {
+//   padding: 0 10px;
+// }
 
 .task-detail-right {
   background-color: #e9e9e9;
