--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -49,13 +49,13 @@
   overflow-wrap: break-word;
 }
 
-.card-dashboard-custom{
+.card-dashboard-custom {
   min-height: 110px;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  h1{
+  h1 {
     font-size: 40px !important;
     text-align: center;
   }
@@ -63,5 +63,48 @@
   span {
     text-align: center;
     display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .card-title {
+    font-size: 2.1vw !important;
+  }
+
+  .card-header {
+    span {
+      font-size: 1vw;
+    }
+  }
+
+  .card-icon {
+    font-size: 1.9vw;
+    margin-left: 10px;
+
+    svg {
+      margin-bottom: 10px;
+    }
+  }
+
+  .card-dashboard-active {
+    h1 {
+      font-size: 3.3vw !important;
+    }
+
+    span {
+      font-size: 1vw;
+    }
+
+    .card-dashboard-custom {
+      h1 {
+        font-size: 2.1vw !important;
+      }
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .card-dashboard-active {
+    min-height: 245px;
   }
 }
