--- a/src/components/Activity/styles.scss
+++ b/src/components/Activity/styles.scss
@@ -21,3 +21,22 @@
   font-weight: 500;
   color: #a6a5a5;
 }
+.filter {
+  margin-top: 15px;
+}
+.filter-type, .start-date, .end-date {
+  width: 90%
+}
+.carouse-img {
+  max-width: 100%;
+  height: 150px;
+}
+.ant-carousel .slick-dots li button {
+  background: red;
+}
+.ant-carousel .slick-dots li.slick-active button {
+  background: red;
+}
+.ant-carousel .slick-dots {
+  position: unset;
+}
